# AssertLang

./: .env.local  .gitignore  AI-AGENT-GUIDE.md  ALIGNMENT_COMPLETE.md  ALIGNMENT_PLAN.md  ANNOUNCEMENT_v2.0.0.md  ARCHITECTURE_DUAL_MODE.md  BRANDING_RESEARCH_REPORT.md  BUGS.md  BUG_FIX_SPRINT_SUMMARY.md  CHANGELOG.md  CICD_QUICK_START.md  CICD_READY.md  CICD_SUMMARY.txt  CLAUDE.md  CLEANUP_OLD_TA_SYSTEM.md  CODE_OF_CONDUCT.md  COMPARISON_TRADITIONAL_VS_MCP.md  COMPILATION_REPORT.md  COMPLETE_LANGUAGE_SUPPORT.md  CONTRIBUTING.md  CORRECTED_VISION.md  CREWAI_INTEGRATION_DESIGN.md  CRITICAL_RISKS_SUMMARY.md  CURRENT_WORK.md  Current_Work.md  DEMO.md  DISTRIBUTED_PW_ARCHITECTURE.md  DOCUMENTATION_AUDIT_ACTION_PLAN.md  DOCUMENTATION_INDEX.md  ELEVATOR_PITCH.md  EXPLAIN_LIKE_IM_5.md  EXPLORATION_COMPLETE.md  FINAL_CLEAN_AUDIT.md  FOR-DAVE.md  FOR-GREG.md  GOOD_FIRST_ISSUES.md  HONEST_ASSESSMENT_RUNTIME.md  HONEST_EXPLANATION.md  IDE_INTEGRATION_ARCHITECTURE.md  (+179 more)
.archive/: README.md
.archive/temp/pw-syntax-mcp-server/: AGENT_SESSION_EXAMPLE.md  ALL_LANGUAGES_VALIDATION.md  COMPLETE_VALIDATION_STRATEGY.md  CORRECT_ARCHITECTURE.md  NORMALIZER_REALITY_CHECK.md  PW_QUICK_REFERENCE.md  VALIDATION_COMPLETE.md  pyproject.toml
.claude/: RELEASE_CHECKLIST.md  SUB_AGENT_TEMPLATE.md  WORKFLOW.md  settings.local.json
.cursor/: mcp.json
.github/: CICD.md  CURRENT_STATUS.md  Current_Work.md  Current_Work.md.backup  FINAL_CLEANUP_SUMMARY.md  LOGO_SETUP_COMPLETE.md  LOGO_USAGE.md  PROFESSIONAL_QUALITY_VERIFIED.md  PULL_REQUEST_TEMPLATE.md  REPOSITORY_STRUCTURE.md  VSCODE_ICON_SETUP.md  dependabot.yml  markdown-link-check-config.json
.profab/: manifest.json
Bugs/: AGENT_PW_TRAINING_PLAN.md  PW_BUG_REPORTS.md  PW_DEMONSTRATION_REPORT.md  PW_ISSUES_LOG.md  PW_PROGRAMMING_GUIDE.md
assertlang/: cli.py
cli/: __init__.py  dsl_format.py  main.py  mcp.py  promptware_old.py  toolgen.py
configs/: dependency-allowlist.yaml
daemon/: __init__.py  deps_utils.py  gateway.py  mcpd.py  uds_shim.py
data/: tools_registry.json
docs/: AI-DEVELOPMENT-WORKFLOWS.md  AI_AGENT_GUIDE.md  AL_LANGUAGE_GUIDE.md  AL_NATIVE_SYNTAX.md  AL_SYNTAX_QUICK_REFERENCE.md  ARCHITECTURE.md  CLAUDE_ADDENDUM.md  Claude.md  DEVELOPMENT.md  EXAMPLES_INDEX.md  GETTING_STARTED.md  INDEX.md  INTEGRATION_TESTING.md  NODEJS_PARSER_V2.md  PRODUCTION_READINESS_PLAN.md  PW_NATIVE_SYNTAX.md  PW_SYNTAX_QUICK_REFERENCE.md  QUICK_REFERENCE.md  README.md  SAFE_PATTERNS.md  SESSION_SUMMARY.md  VS_CODE_EXTENSION.md  agents.md  assertlang-network-flow.html  cheatsheet.md  cli-guide.md  execution-plan-v2.md  execution-plan.md  framework-overview.md  http-server-audit.md  http-transport-complete.md  http-transport-integration.md  language-engineering-notes.md  mcp-testing-plan.md  production-hardening.md  promptware-devguide-manifesto.md  promptware-network-flow.html  prompware manifesto.md  runner-timeline-parity.md  source-language-research.md  (+3 more)
dsl/: README.md  ir.py  pw_generator.py  pw_parser.py  pw_runtime.py  runtime.py  runtime_mcp.py  type_inference.py  type_system.py
examples/: AI_CODE_REVIEWER_README.md  README.md  ai-code-reviewer_server.py  ai_code_reviewer_server.py  calculator.go  calculator.py  calculator.rs  client_examples.py  demo_agent_server.py  deployment-manager_server.py  dotnet_generator_demo.py  monitored-service_server.py  observable_agent_server.py  sdk_example.js  sdk_example.py  simple_demo.py  test_agent.py  test_demo_agent.sh  two_agent_demo.py
language/: CSharpASTParser.csproj  Cargo.toml  README.md  agent_parser.py  csharp_ast_parser.cs  dotnet_generator_v2.py  dotnet_parser_v2.py  executor.py  go_ast_parser  go_ast_parser.go  go_generator_v2.py  go_helpers.py  go_parser_v2.py  go_parser_v3.py  go_server_generator.py  interpreter.py  javascript_generator.py  library_mapping.py  mcp_client.py  mcp_config_generator.py  mcp_error_handling.py  mcp_health_checks.py  mcp_security.py  mcp_server_generator.py  mcp_server_generator_dotnet.py  mcp_server_generator_go.py  mcp_server_generator_nodejs.py  mcp_server_generator_rust.py  mcp_stdio_server.py  nodejs_generator_v2.py  nodejs_server_generator.py  package-lock.json  package.json  parser.py  python_generator_v2.py  python_parser_v2.py  python_parser_v2_additions.txt  rust_ast_parser.rs  rust_generator_v2.py  rust_parser_v2.py  (+4 more)
ml/: charcnn_best.pt  charcnn_large.pt  training_log.txt
promptware/: __init__.py  cli.py  client.py  config.py  sdk.py  testing.py  transport.py
promptware-go/: go.mod
promptware-js/: client.js  index.js  package.json  registry.js  sdk.d.ts  test.js  transport.js
promptware.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pw-syntax-mcp-server/: AGENT_SESSION_EXAMPLE.md  CURRENT_WORK.md  PW_99_PERCENT_SYSTEM.md  PW_AGENT_ONBOARDING.md  PW_PRECISION_TRAINER.md  PW_QUICK_REFERENCE.md  PW_UNIVERSAL_LANGUAGE_DESIGN.md  README.md  TELEPHONE_GAME_ISSUES.md  server.py
pytest/: __init__.py  __main__.py
reverse_parsers/: README.md
schema_backup_http/: schema.v1.json
scripts/: agent_sync.py  build_server.py  check_deps.sh  check_status.sh  cleanup_repo.sh  create_pr.sh  create_ta.sh  git_sync.sh  integration_run.sh  (+6 more)
sdks/python/: README.md  pyproject.toml
sdks/python/src/assertlang_sdk/: version.py
sdks/python/src/promptware_sdk/: __init__.py  types.py
sdks/python/src/promptware_sdk/mcp/: transport.py  verbs.py
sdks/python/src/promptware_sdk/timeline/: reader.py
(+851 files in other folders)
