[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "promptware"
version = "1.1.0"
description = "Production-ready MCP agent framework with multi-language support"
requires-python = ">=3.9"
readme = "README.md"
authors = [{ name = "Promptware Contributors", email = "hello@promptware.dev" }]
dependencies = [
  "requests>=2.31.0",
  "tomli>=2.0.0; python_version<'3.11'",
  "tomli-w>=1.0.0",
]

[project.scripts]
promptware = "promptware.cli:main"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
ignore = []

[tool.setuptools]
packages = { find = { exclude = ["tests", "tests.*", "examples", "examples.*"] } }
