[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "assertlang"
version = "2.2.0-alpha4"
description = "Executable contracts for multi-agent systems - deterministic coordination across frameworks and languages"
requires-python = ">=3.9"
readme = "README.md"
authors = [{ name = "AssertLang Contributors", email = "hello@assertlang.dev" }]
dependencies = [
  "requests>=2.31.0",
  "tomli>=2.0.0; python_version<'3.11'",
  "tomli-w>=1.0.0",
  "pyyaml>=6.0.0",
  "jsonschema>=4.0.0",
]

[project.scripts]
asl = "assertlang.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.1.0",
  "pytest-mock>=3.12.0",
  "black>=23.10.0",
  "flake8>=6.1.0",
  "mypy>=1.6.0",
  "ipython>=8.17.0",
  "ipdb>=0.13.13",
  "click>=8.0.0",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
ignore = []

[tool.setuptools]
packages = { find = { exclude = ["tests", "tests.*", "examples", "examples.*"] } }
