[workspace]
# Empty workspace to prevent conflicts with parent

[package]
name = "rust_ast_parser"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust_ast_parser"
path = "rust_ast_parser.rs"

[dependencies]
syn = { version = "2.0", features = ["full", "visit"] }
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
