[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "assertlang-sdk"
version = "0.0.2"
description = "Host SDK for AssertLang MCP integration"
requires-python = ">=3.10"
readme = "README.md"
authors = [{ name = "AssertLang Team" }]
license = { text = "MIT" }
keywords = ["assertlang", "mcp", "dsl", "orchestration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "requests>=2.31",
    "websocket-client>=1.7",
    "jsonschema>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "black>=23",
    "ruff>=0.1",
    "mypy>=1.7",
]

[project.urls]
Homepage = "https://github.com/AssertLang/AssertLang"
Documentation = "https://docs.assertlang.dev"
Repository = "https://github.com/AssertLang/AssertLang"
Issues = "https://github.com/AssertLang/AssertLang/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
ignore = []

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]